# saa

./: .clang-format  .gitignore  meson.build
include/saa/: camera.hpp  drawable.hpp  gl.h  math.hpp  projection.hpp  shader.hpp  types.hpp  window.hpp
include/saa/drawing/: circles.hpp  points.hpp
include/saa/glad/: glad.h
src/: camera.cpp  config.hpp.in  glad.c  math.cpp  projection.cpp  saa_main.cpp  shader.cpp  window.cpp
src/drawing/: circles.cpp  points.cpp
src/shaders/: circles.fs.glsl  circles.vs.glsl  points.fs.glsl  points.vs.glsl
